tests/paczka1/fuzzy1/43545610.err
Error in line 8: yJcH A11| 38,7
Error in line 3: yJcH A116 85,1
Error in line 1: 0TR2o A115 72,3
Error in line 13: BKW A984 93,8
Error in line 9: yJcH A115 1,2
Error in line 16: yJcH A116 99,8
Error in line 21: EVaF52qNT A108 27,1
Error in line 35: VEWUYxgMZ A108 38,09
Error in line 36: m3zPYfniG8 A115 88,4
